@@ -2,8 +2,7 @@
 
 ####
 #
-# Example usage:
-# ./start.sh -p 9091 -j octopus3-repository-service-1.0-SNAPSHOT-Shadow.jar -e dev -l /opt/logs/repository -n octopus-repository-service
+# Example usage: ./start.sh -p 9091 -j octopus3-repository-service-1.0-SNAPSHOT-fat.jar
 #
 ####
 
@@ -27,6 +26,7 @@ jar=
 logDirectory=
 environment=
 name=
+JVM_ARGS="-server -Djava.net.preferIPv4Stack=true -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+AlwaysPreTouch -XX:ThreadStackSize=4096 -Xmx512m -Xms256m"
 
 realargs="$@"
 while [ $# -gt 0 ]; do
@@ -89,19 +89,19 @@ if [ -n "$pid" ]; then
     exit 1
 fi
 
+rm -Rf $logDirectory/*
+echo "[CLEAN] Cleaned log folder $logDirectory"
+
 mkdir -p "$logDirectory"
-echo "[START  ] Service is starting"
-nohup /opt/java/bin/java -Dratpack.port=$port -DlogDirectory=$logDirectory -Denvironment=$environment -Dname=$name -jar /opt/shared/to_deploy/$jar 2>/dev/null &
+cmd="nohup /opt/java/bin/java $JVM_ARGS -Dratpack.port=$port -DlogDirectory=$logDirectory -Denvironment=$environment  -Dlogback.configurationFile=/opt/shared/configuration/logs/${name}.groovy -Dname=$name -jar /opt/shared/to_deploy/$jar > $logDirectory/stdout.log 2>&1&"
+echo "[START  ] Service is starting with command [ $cmd ]"
+bash -c "$cmd"
 sleep 10
 echo "[START  ] Service started"
 
 mkdir -p "/opt/archive/packages/"
 cp "/opt/shared/to_deploy/${jar}" "/opt/archive/packages/${now}-${jar}"
 echo "[ARCHIVE] Package is archived to /opt/archive/packages/ directory"
-
-mkdir -p "/opt/archive/logs/"
-cp -r "$logDirectory" "/opt/archive/logs/${now}-logs"
-echo "[ARCHIVE] Logs are archived to /opt/archive/logs/ directory"
 
 pid=`ps ax | grep java | grep "ratpack" | grep "$name" | awk '{print $1}'`
 if [ -z "$pid" ]; then
@@ -112,3 +112,4 @@ else
 fi
 
 echo "==============================="
+
